--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.6.1",
+    "remark-gfm": "^3.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
